# spy

./: .gitignore  .gitmodules  APP_STORE_METADATA.md  LICENSE  README.md  app.json  babel.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ios-build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/rork/spy/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/: _layout.tsx  ad-stats.tsx  create-game.tsx  game.tsx  index.tsx  range-game.tsx  range-play.tsx  range-topics.tsx  settings.tsx  topics.tsx
components/: RewardedAd.tsx  SplashScreen.tsx
data/: default-topics.ts  range-questions.ts
hooks/: useAppSettings.ts  useTheme.ts  useVibration.ts
ios/: ExportOptions.plist  Podfile
ios/spy/: Info.plist
ios/spy.xcodeproj/: project.pbxproj
ios/spy/Supporting/: Expo.plist
scripts/: patch-metro.js
stores/: ads-store.ts  categories-store.ts  game-store.ts  player-presets-store.ts  range-game-store.ts  range-topics-store.ts  settings-store.ts  topics-store.ts
tests/: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  clean_spy_test.py  enhanced_fairness_test.py  package.json  pyproject.toml  quick_test.py  requirements.txt  spy_selection_simulation.py  your_exact_algorithm_test.py
tests/.github/workflows/: ci-cd.yml
tests/docs/: README.md  fairness-analysis.md  performance-optimization.md  testing-strategies.md  visualization-guide.md
tests/docs/examples/: README.md  basic_usage.py
utils/: spyReveal.ts
website/: README.md  index.html  privacy.html  support.html
